--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ logging.level.org.zalando.logbook=TRACE
 
 spring.sql.init.mode=always
 spring.datasource.url=jdbc:h2:file:./db/filmorate
+#spring.datasource.url=jdbc:h2:mem:filmorate;
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=admin
+
